alignment fixes

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -53,7 +53,7 @@ h1 {
 }
 
 h1.techno_left {
-  left        : .2em;
+  //left        : .2em;
 
   font-family : "DigitalDisorder", Cocogoose, Verdana, Helvetica, sans-serif;
   color       : $yellow;
@@ -61,7 +61,7 @@ h1.techno_left {
 }
 
 h1.social_left {
-  left        : .2em;
+  //left        : .2em;
 
   font-family : "go around the books", Cocogoose, Verdana, Helvetica, sans-serif;
   color       : #444;
@@ -69,7 +69,7 @@ h1.social_left {
 }
 
 h1.techno_right {
-  left        : .2em;
+  //left        : .2em;
 
   font-family : "DigitalDisorder", Cocogoose, Verdana, Helvetica, sans-serif;
   color       : #ccc;
@@ -77,7 +77,7 @@ h1.techno_right {
 }
 
 h1.social_right {
-  left        : .2em;
+  //left        : .2em;
   z-index: 2;
 
   font-family : "go around the books", Cocogoose, Verdana, Helvetica, sans-serif;
@@ -89,12 +89,12 @@ h1.social_right {
   /* only as wide as content */
   display           : inline-block;
 
-  height            : 3em;
+  height            : 3rem;
   margin            : auto;
-  padding           : .5em 2em 0em;
+  padding           : .5rem 2rem 3rem;
 
   font-family       : "BebasNeue", "Cocogoose", Cocogoose, Verdana, Helvetica, sans-serif;
-  border-radius     : .5em;
+  border-radius     : .5rem;
 
   -webkit-transform : skew(-30deg);
   -moz-transform    : skew(-30deg);
@@ -114,15 +114,26 @@ h1.social_right {
 .parallelogram_left {
   background : #fff;
   color      : #000;
-    font-family : "Viva Persib", "Cocogoose", Helvetica, sans-serif;
+    font-family : "VivaPersib", "Cocogoose", Helvetica, sans-serif;
 
 }
 
 .parallelogram_right {
   background : #000;
   color      : #fff;
-    font-family : "mathilde", "Cocogoose", Helvetica, sans-serif;
+}
 
+.parallelogram_text_left {
+  @extend .parallelogram_text;
+    position: relative;
+    top: 2px;
+}
+.parallelogram_text_right {
+  @extend .parallelogram_text;
+    font-family : "mathilde", "Cocogoose", Helvetica, sans-serif;
+    font-size: 2.5em;
+    position: relative;
+    top: -6px;
 }
 
 #beforeafter {
@@ -478,7 +489,7 @@ left: 5vw;
 }
 #techno_list {
 position: relative;
-left: -5vw;
+//left: -5vw;
 }
 .main_item {
 	   width: 80vw;
